# EnglishLearn

./: .env.example  .env.production  .gitignore  .vercelignore  ALIYUN_DEPLOYMENT_GUIDE.md  ANDROID_GUIDE.md  AZURE_SETUP_GUIDE.md  BACKEND_SETUP.md  CLOUD_DEPLOYMENT_GUIDE.md  COMPLETE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOMESTIC_AI_SETUP_GUIDE.md  RUN_GUIDE.md  TESTING.md  TRAE.md  TRAE_BOOTSTRAP.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_QUICK_START.md  build-complete.bat  build-frontend.bat  deploy-production.bat  deploy.bat  docker-compose.prod.yml  docker-compose.yml  install-python.bat  quick-start.bat  rollback.bat  setup-backend.bat  start-backend-complete.bat  start-backend-direct.bat  start-backend.bat  start-complete.bat  start-frontend.bat  start-mobile.bat  start-project.bat  vercel.json  verify-deployment.bat
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5f9f5f4997b7_sqlite_compatible.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  base.py  config.py  exceptions.py  llm_client.py  pronunciation_evaluator.py  retry.py  schemas.py  stt_client.py  tts_client.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  security.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: __init__.py  base.py  custom_scenario.py  dialogue.py  payment.py  practice.py  refresh_token.py  scenario.py  user.py
backend/app/repositories/: __init__.py  base.py  dialogue.py  payment.py  practice.py  practice_repo.py  refresh_token.py  scenario.py  scenario_repo.py  user.py  user_repo.py
backend/app/schemas/: __init__.py  base.py  dialogue.py  evaluation.py  payment.py  practice.py  report.py  scenario.py  user.py
backend/app/services/: auth_service.py  base.py  dialogue_service.py  evaluation_service.py  payment_service.py  (+3 more)
backend/migrations/: env.py
backend/requirements/: base.txt  development.txt  production.txt
backend/tests/: conftest.py
(+90 files in other folders)
